SERVER-19128 add debugging output

(cherry picked from commit 7494d0c5a65d3e7128aa8a8857ce78dd7aea1ee6)